--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+emailConfig.js 
 
 # testing
 /coverage
@@ -18,6 +19,14 @@
 .env.test.local
 .env.production.local
 
-npm-debug.log*
+npm-debug.log* 
 yarn-debug.log*
 yarn-error.log*
+
+
+# cred
+.env
+supabaseClient.js
+data/constants.js
+constants.js
+data/constants.js
