--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@mui/material": "^5.15.10",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
+    "@supabase/supabase-js": "^2.48.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "emailjs": "^4.0.3",
     "framer-motion": "^11.0.5",
     "gh-pages": "^3.2.3",
     "maath": "^0.10.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
