--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://arsudsandesh97.github.io",
-  "name": "Sandesh Arsud",
+  "homepage": "https://akshayshinde3.github.io",
+  "name": "Akshay Shinde",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
