--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "maath": "^0.10.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.0.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
